@@ -65,7 +65,7 @@ StyledItem
     function show()
     function hide()
     property string title
-    property Component contents
+    property Item contents
     property Flickable flickable
 modules/Ubuntu/Components/Icon.qml
 Item
@@ -183,12 +183,14 @@ modules/Ubuntu/Components/TabBar.qml
 StyledItem
     property Item tabsItem
     property bool active
+    property bool alwaysActive
+    property bool animate
 modules/Ubuntu/Components/Tabs.qml
 PageTreeNode
     property int selectedTabIndex
     readonly property Tab selectedTab
     readonly property Item currentPage
-    property Component __headerContents
+    property TabBar tabBar
     property ToolbarActions tools
     onToolsChanged
     property internal __tabs
